# embedded-nal

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci-async.yml  ci.yml  clippy-async.yml  clippy.yml  rustfmt.yml
embedded-nal-async/: CHANGELOG.md  Cargo.toml  README.md  build.rs
embedded-nal-async/src/: dns.rs  lib.rs
embedded-nal-async/src/stack/: mod.rs  tcp.rs  udp.rs
src/: dns.rs  lib.rs
src/stack/: mod.rs  share.rs  tcp.rs  udp.rs
