[package]
name = "embedded-nal"
version = "0.1.0"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2018"
description = "A Network Abstraction Layer (NAL) for Embedded Systems"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "0.1"
no-std-net = "0.3.0"
heapless = "^0.5"
