[package]
name = "embedded-nal"
version = "0.2.0" # remember to update html_root_url
authors = [
    "Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
    "Mathias Koch <mk@blackbird.online>",
    "Diego Barrios Romero <eldruin@gmail.com>",
    "Ryan Summers <ryan.summers@vertigo-designs.com>",
]
edition = "2018"
description = "A Network Abstraction Layer (NAL) for Embedded Systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-embedded-community/embedded-nal"
homepage = "https://github.com/rust-embedded-community/embedded-nal"
documentation = "https://docs.rs/embedded-nal"
readme = "README.md"
keywords = ["network"]
categories = ["embedded", "hardware-support", "no-std", "network-programming"]

[dependencies]
nb = "1"
no-std-net = "0.4"
heapless = "^0.5"
