[package]
name = "embedded-nal"
version = "0.7.0"
authors = [
    "Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
    "Mathias Koch <mk@blackbird.online>",
    "Diego Barrios Romero <eldruin@gmail.com>",
    "Ryan Summers <ryan.summers@vertigo-designs.com>",
]
edition = "2021"
description = "A Network Abstraction Layer (NAL) for Embedded Systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-embedded-community/embedded-nal"
homepage = "https://github.com/rust-embedded-community/embedded-nal"
documentation = "https://docs.rs/embedded-nal"
readme = "README.md"
keywords = ["network"]
categories = ["embedded", "hardware-support", "no-std", "network-programming"]

[features]
default = ["no-std-net"]
ip_in_core = []

[dependencies]
nb = "1"
no-std-net = { version = "0.6", optional = true }