[package]
name = "embedded-nal-async"
version = "0.8.0"
edition = "2021"
description = "An Async Network Abstraction Layer (NAL) for Embedded Systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-embedded-community/embedded-nal"
homepage = "https://github.com/rust-embedded-community/embedded-nal"
documentation = "https://docs.rs/embedded-nal-async"
readme = "README.md"
keywords = ["network"]
categories = ["embedded", "hardware-support", "no-std", "network-programming", "asynchronous"]

[dependencies]
embedded-nal = { version = "0.9.0", path = "../" }
embedded-io-async = { version = "0.7.0" }
